kubernetes/apps/development/coder/app/httproute.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/gateway.networking.k8s.io%2Fhttproute.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app coder
spec:
  hostnames: ["${GATUS_DOMAIN:=${GATUS_SUBDOMAIN:=${APP}}.${DOMAIN_APP}}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https-app
  rules:
    - backendRefs:
        - name: *app
          port: 80
# 20250817: Disabled wildcard route, waiting for external-dns support (>0.18.1?) for wildcard CNAMEs
# Ref: https://github.com/kubernetes-sigs/external-dns/issues/5635
# Workaround: use LoadBalancer service with annotations
# ---
# # yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/httproute_v1.json
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: coder-wildcard
# spec:
#   hostnames: ["*.coder.${DOMAIN_DEV}"]
#   parentRefs:
#     - name: internal
#       namespace: kube-system
#       sectionName: https-dev-coder
#   rules:
#     - backendRefs:
#         - name: coder
#           port: 80
